# projects-experiments

./: .gitattributes  .gitignore  README.md
Languages/: vending_machine.md
Languages/Algol-68/: readme.md  test.a68
Languages/C/: readme.md
Languages/Clojure/: readme.md  test.clj
Languages/Go/: params.go  readme.md  utilities.go
Languages/Go/The tour/: print_name.go  random_int.go
Languages/Go/Vending Machine/: main.go
Languages/Go/concurrency-testing/: condvars.go  mutexes.go
Languages/Go/encore testing/: readme.md
Languages/Go/epub-writer/: main.go
Languages/Go/mp3/: go.sum  (+2 more)
Languages/Haskell/: readme.md  test.hs
Languages/Java/: Main.java  Player.java  README.md  Utilities.java
Languages/JavaScript/: alpinejs-test.html  iframe testing auto.html  iframe testing.html  lightbox.html  save_multiple_files.html
Languages/Julia/: readme.md  testing.jl
Languages/PHP/: first_time_testing.php
Languages/Python/: Answering Stack overflow questions.py  README.md  bitpatterns.py  easy_ascii.py  enumerate_binary.py  kmap_testing.py  latex_test.py  llvm-test.py  map.py  nocode.py  params.py  scratch_pad.py  set_theory.py  string_similarity.py
Languages/Rust/: bits_&_Peices.md  readme.md
Languages/Rust/1. The Book/Chapter 14; More about Cargo/more_cargo/: Cargo.toml
Languages/Rust/1. The Book/Chapter 14; More about Cargo/more_cargo/src/: lib.rs  main.rs
Languages/Rust/win_gui_test/: Cargo.toml
Languages/elixir/: readme.md  test.exs
Languages/fortran/: name.f90  readme.md
Languages/simula/: readme.md  test.cim
Languages/swift/: README.md
(+1047 files in other folders)
