[package]
name = "win_gui_test"
version = "0.1.0"
authors = ["Kieran Wood <kieranw098@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.5"
native-windows-derive = "1.0.2" # Optional. Only if the derive macro is used.